# atlas-core

./: .env.example  .gitignore  .pre-commit-config.yaml  00_prereqs.ps1  01_setup_venv.ps1  02_install_deps.ps1  03_run_atlas_api.ps1  04_smoke_tests.ps1  05_kill_port.ps1  06_git_sanity.ps1  07_install_all.ps1  ATLAS_CODE_QUANT_AUDIT_EXPORT.md  ATLAS_SUPERVISOR.md  CHANGELOG.md  CLAUDE.md  CRITICAL_FILES.md  CURSOR_PROMPT.md  Dockerfile  Dockerfile.jetson  EJECUTOR_COMIENZA_AQUI.md  FORENSICS.json  INICIAR.ps1  LAST_TEST_RUN.txt  OUTPUT_FLOW_DIAGRAM.txt  RAULI_VISION.ps1  README.md  README_HERRAMIENTAS.md  RECENT_LOGS.txt  RESTART_ADMIN.bat  RESTART_ADMIN.ps1  TEST_INVENTORY.txt  TREE.txt  _tmp_CODEX_ATLAS_ELITE_PROMPT.docx  _tmp_read_prompt_docx.py  atlas.py  atlas_audit_report_20260415.txt  atlas_charts.html  atlas_con_nexus.py  atlas_evolution.py  atlas_launcher.py  (+161 more)
.codex/: config.toml  config.toml.bak-20260304-084621  config.toml.bak-latency-20260304-153234  config.toml.bak-realtime-20260304-153802
.githooks/: post-commit
.playwright-cli/: page-2026-03-11T03-18-40-000Z.yml  page-2026-03-11T04-49-01-195Z.yml  page-2026-03-11T04-50-28-861Z.yml  page-2026-03-11T05-12-19-831Z.yml
agents/: __init__.py  coder_agent.py  inspector_agent.py  navigator_agent.py  orchestrator.py
api/: __init__.py
atlas/: __init__.py
atlas_adapter/: agent_cycle_analysis.py  agent_cycle_prevention.py  agent_engine.py  atlas_http_api.py  camera_manager.py  execution_history.py  execution_runner.py  run_atlas_api.cmd  supervisor_daemon.py  supervisor_policy.py
atlas_code_quant/: PDT_MIGRATION.md  SCANNER_CRITERIA_AUDIT.md  __init__.py  atlas_core_provenance.py  atlas_quant_core.py  backtester.py  chart_launcher.py  daily_paper_report.py  grok_decision_pack.py  grok_expert_adapter.py  grok_policy.py  main.py  options_scoring.py  pdt_gates_found.txt  requirements-backtest.txt  requirements-dev.txt  requirements.txt  start_paper_trading.py  start_quant.bat
atlas_core/: ARCHITECTURE_POSITIONING.md  CANONICAL.md  MANIFEST.json  __init__.py
atlas_nexus/: INTEGRAR_AQUI.md
atlas_push/: __init__.py
atlas_scanner/: PLAN_SCANNER_PRO.md  __init__.py  config.py  config_loader.py  exceptions.py
autonomous/: __init__.py  api_routes.py
brain/: __init__.py  claude_memory_bridge.py
bridge/: atlas_api_min.py  server.py
calibration/: atlas_screen_map.json
config/: .env.example  __init__.py  acuse_recibo_git.md  ai_config.json  atlas.env  atlas.env.example  atlas_quant_bridge.env.example  atlas_tools_config.py  automation_systems_unified.md  autonomous.yaml  brain_state.json  git_automation_summary.md  git_error_handling_protocol.md  git_safety_analysis.md  git_security_implementation.md  medulla_topics.yaml  mem0_config_correction.md  openai_key.txt  recomendaciones_herramientas.md  repo_monitor.yaml  screen_gaze_calibration.json  setup_keys.md  update_center_config.json  vscode_settings_template.json
constraints/: nexus-base.txt  push-base.txt  robot-base.txt
contracts/: atlas_comms_messages.schema.sql  atlas_fault_event.schema.json  panaderia_inventory_adjustment_command.schema.json  rauli_vision_detection_event.schema.json
core/: logger.py  scheduler.py
data/: autonomy_tasks.db
docker/: entrypoint.sh
docs/: ANALISIS_ROBOTICA_ATLAS.md  APRENDIZAJE_PROGRESIVO_ATLAS.md  APROBACION_ANS_CONFIG.md  ARCHITECTURE.md  ARQUITECTURA_COGNITIVA.md  ARRANQUE_NEXUS_8000.md  ATLAS_ARCHITECT.md  ATLAS_CENTRAL_ORCHESTRATION.md  ATLAS_CODE_QUANT_F10_SCANNER_SUBORDINATED_TO_RADAR_ENFORCEMENT.md  ATLAS_CODE_QUANT_F11_STRATEGY_INTENT_OVER_RADAR.md  ATLAS_CODE_QUANT_F12_STRATEGY_FACTORY.md  ATLAS_CODE_QUANT_F13_LEAN_ADAPTER_MVP.md  ATLAS_CODE_QUANT_F14_STRATEGY_FITNESS_PIPELINE.md  ATLAS_CODE_QUANT_F15_TRADIER_ADAPTER_INSTITUTIONAL.md  ATLAS_CODE_QUANT_F16_PAPER_EXECUTION_PIPELINE.md  ATLAS_CODE_QUANT_F17_AUTONOMY_FSM_PAPER.md  ATLAS_CODE_QUANT_F18_VISION_GATE_IN_FSM.md  ATLAS_CODE_QUANT_F19_SAFETY_AND_KILLSWITCH.md  ATLAS_CODE_QUANT_F1_REORG.md  ATLAS_CODE_QUANT_F20_LIVE_READINESS_CHECKLIST.md  ATLAS_CODE_QUANT_F2_INTERNAL_SIMULATOR_RENAME.md  ATLAS_CODE_QUANT_F3_SCANNER_DEPRECATION.md  ATLAS_CODE_QUANT_F4_TRADIER_CANONICALIZATION.md  ATLAS_CODE_QUANT_F6_RADAR_INTAKE_SHADOW.md  ATLAS_CODE_QUANT_F7_SCANNER_RADAR_FILTER_SHADOW.md  ATLAS_CODE_QUANT_F8_SCANNER_RADAR_RUNTIME_SHADOW.md  ATLAS_CODE_QUANT_F9_SCANNER_RADAR_SHADOW_HOOK_AND_GATE_PREP.md  ATLAS_CODE_QUANT_REORG_VERIFICATION.md  ATLAS_FAULT_MANAGER_V1.md  ATLAS_HTTP_API_MODULAR_PLAN.md  ATLAS_LOCAL_AI_PLAN.md  ATLAS_PYTHON_MASTERY.md  ATLAS_RADAR_STACK.md  DEPLOY.md  (+51 more)
ros2_ws/src/atlas_brain_bridge/: package.xml  setup.cfg  setup.py
ros2_ws/src/atlas_brain_bridge/atlas_brain_bridge/: brain_bridge_node.py
ros2_ws/src/atlas_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/atlas_bringup/config/: atlas_params.yaml
ros2_ws/src/atlas_bringup/launch/: atlas_full.launch.py
ros2_ws/src/atlas_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/atlas_interfaces/action/: ExecuteTask.action
ros2_ws/src/atlas_interfaces/msg/: BalanceStatus.msg  BrainQuery.msg  GaitCommand.msg  PerceptionResult.msg  RobotState.msg  SupervisorHeartbeat.msg  TaskGoal.msg
ros2_ws/src/atlas_interfaces/srv/: PlanTask.srv  QueryBrain.srv  SetGait.srv  SystemDiagnostic.srv
ros2_ws/src/atlas_motor_control/: package.xml  setup.cfg  setup.py
ros2_ws/src/atlas_motor_control/atlas_motor_control/: balance_controller.py  gait_generator.py  joint_commander.py
ros2_ws/src/atlas_perception/: package.xml  setup.cfg  setup.py
ros2_ws/src/atlas_perception/atlas_perception/: object_detector.py  slam_node.py  vision_node.py
ros2_ws/src/atlas_planning/: package.xml  setup.cfg  setup.py
ros2_ws/src/atlas_planning/atlas_planning/: path_planner.py  task_planner.py
ros2_ws/src/atlas_sensors/: package.xml  setup.cfg  setup.py
ros2_ws/src/atlas_sensors/atlas_sensors/: force_torque_publisher.py  imu_publisher.py  joint_state_publisher.py
ros2_ws/src/atlas_supervisor/: package.xml  setup.cfg  setup.py
ros2_ws/src/atlas_supervisor/atlas_supervisor/: supervisor_node.py
(+6906 files in other folders)
