<?xml version="1.0"?>
<package format="3">
  <name>atlas_brain_bridge</name>
  <version>0.1.0</version>
  <description>Atlas brain bridge: connects ROS 2 spine to existing Atlas AI brain, ANS, memory, and learning systems</description>
  <maintainer email="raul@atlas-robot.dev">Raul</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>atlas_interfaces</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
