<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>atlas_bringup</name>
  <version>0.1.0</version>
  <description>Atlas robot bringup: launch files, configuration, and system startup</description>
  <maintainer email="raul@atlas-robot.dev">Raul</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>atlas_supervisor</exec_depend>
  <exec_depend>atlas_sensors</exec_depend>
  <exec_depend>atlas_motor_control</exec_depend>
  <exec_depend>atlas_perception</exec_depend>
  <exec_depend>atlas_planning</exec_depend>
  <exec_depend>atlas_brain_bridge</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
