<?xml version="1.0"?>
<package format="3">
  <name>atlas_interfaces</name>
  <version>0.1.0</version>
  <description>Atlas custom ROS 2 messages, services, and actions</description>
  <maintainer email="raul@atlas-robot.dev">Raul</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
