<?xml version="1.0"?>
<package format="3">
  <name>atlas_motor_control</name>
  <version>0.1.0</version>
  <description>Atlas motor control layer: balance controller, gait generator, joint command interface (IHMC-inspired)</description>
  <maintainer email="raul@atlas-robot.dev">Raul</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>atlas_interfaces</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
