<?xml version="1.0"?>
<package format="3">
  <name>atlas_perception</name>
  <version>0.1.0</version>
  <description>Atlas perception layer: vision (YOLO), depth processing, SLAM integration</description>
  <maintainer email="raul@atlas-robot.dev">Raul</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>atlas_interfaces</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
