<?xml version="1.0"?>
<package format="3">
  <name>atlas_planning</name>
  <version>0.1.0</version>
  <description>Atlas planning layer: task planner (AI-driven) and path planner (Nav2-compatible)</description>
  <maintainer email="raul@atlas-robot.dev">Raul</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>atlas_interfaces</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
